# blazr

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: api.md  architecture.md  configuration.md
src/: chat_template.rs  lib.rs  main.rs
src/cli/: bench.rs  chat.rs  commands.rs  convert.rs  disaggregated.rs  disaggregated_forward.rs  info.rs  list.rs  mod.rs  ps.rs  pull.rs  run.rs  serve.rs  swarm.rs  swarm_forward.rs  util.rs
src/config/: blazr.rs  generation.rs  inference.rs  mod.rs  server.rs  user.rs
src/distributed/: mod.rs
src/engine/: batch_decode.rs  batch_engine.rs  bench_config.rs  cache_router.rs  cuda_graphs.rs  cuda_graphs_batched.rs  data_parallel.rs  executor.rs  executor_cache.rs  executor_embed.rs  executor_generate.rs  executor_multimodal.rs  generate_text.rs  grammar.rs  grammar_json.rs  grammar_parser.rs  lora.rs  mirostat.rs  mod.rs  moe_offload.rs  moe_offload_types.rs  request_scheduler.rs  sampling.rs  scheduler.rs  slots.rs  speculative.rs  tensor_parallel.rs  types.rs  warmup.rs
src/loader/: api.rs  detect.rs  gguf.rs  mod.rs  safetensors.rs  vision.rs
src/loader/safetensors/: awq.rs  config.rs  detect_arch.rs  gptq.rs  loaders.rs  mod.rs  offloading.rs  regular.rs
src/model/: chat_template.rs  config.rs  detect.rs  mod.rs  think.rs
src/server/: anthropic.rs  audio.rs  chat.rs  chat_types.rs  completions.rs  config_watch.rs  embeddings.rs  encoding.rs  gen_types.rs  generation.rs  handlers.rs  infill.rs  lora.rs  management.rs  metrics.rs  mod.rs  multimodal.rs  pooling.rs  rerank.rs  responses.rs  routes.rs  slo.rs  startup.rs  streaming.rs  tools.rs
src/tokenizer/: gguf_tokenizer.rs  mod.rs  splintr_tokenizer.rs  traits.rs
tests/: api.rs
