[package]
name = "blazr"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["Farhan Syah"]
description = "Production-grade LLM inference server with OpenAI-compatible API. Supports Llama, Mistral, Mamba2, MLA+MoE, and hybrid architectures across SafeTensors, AWQ, GPTQ, and GGUF formats."
license = "Apache-2.0"
repository = "https://github.com/ml-rust/blazr"
homepage = "https://github.com/ml-rust/blazr"
keywords = ["inference", "llm", "server", "openai", "gguf"]
categories = ["science", "web-programming"]

[features]
default = ["f16"]
f16 = ["boostr/f16"]
cuda = ["boostr/cuda"]

[dependencies]
# ML framework (model architectures, quant kernels, tensors via numr)
boostr = { path = "../boostr" }

# Tokenization
splintr = { path = "../splintr" }

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "timeout",
  "limit",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Byte casting for tensor creation from raw bytes
bytemuck = "1"
half = "2"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
glob = "0.3"

# HuggingFace Hub for model downloading
hf-hub = "0.5"
dotenvy = "0.15"

# Async streaming
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"

# Random number generation
rand = "0.8"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }

# CLI UX
colored = "3"
indicatif = "0.18"
dirs = "6"
rustyline = "15"

# HTTP client (for blazr ps)
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
